k8s/manifests/1-databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-db
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: kc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kc-db
  template:
    metadata:
      labels:
        app: kc-db
    spec:
      containers:
        - name: kc-db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: kc-db
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: kc-db
