k8s/manifests/2-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: vault
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault-unsealer-sa
      securityContext:
        fsGroup: 100
      containers:
        - name: vault
          image: hashicorp/vault:latest
          command:
            - vault
            - server
            - -config=/vault/config/vault.hcl
          ports:
            - containerPort: 8200
              name: api
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          volumeMounts:
            - name: vault-config
              mountPath: /vault/config
            - name: vault-data
              mountPath: /vault/data
        - name: vault-unsealer
          image: alpine:latest
          command:
            - /bin/sh
            - /unsealer/unseal.sh
          volumeMounts:
            - name: vault-unsealer-script
              mountPath: /unsealer/unseal.sh
              subPath: unseal.sh
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-data-claim
        - name: vault-unsealer-script
          configMap:
            name: vault-unsealer-script
            defaultMode: 493
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: vault
