k8s/manifests/4-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-storage
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: object-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-storage
  template:
    metadata:
      labels:
        app: object-storage
    spec:
      containers:
        - name: object-storage
          image: registry.deti/tenant-grupo8-egs-deti-ua-pt/object-storage:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: object-storage-data
              mountPath: /data
      volumes:
        - name: object-storage-data
          persistentVolumeClaim:
            claimName: object-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: object-storage
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: object-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-editor
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: video-editor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-editor
  template:
    metadata:
      labels:
        app: video-editor
    spec:
      containers:
        - name: video-editor
          image: registry.deti/tenant-grupo8-egs-deti-ua-pt/video-editor:v1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: scratch-volume
              mountPath: /tmp
      volumes:
        - name: scratch-volume
          emptyDir:
            sizeLimit: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: video-editor
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: video-editor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: registry.deti/tenant-grupo8-egs-deti-ua-pt/notifications:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: notifications-data
              mountPath: /data
      volumes:
        - name: notifications-data
          persistentVolumeClaim:
            claimName: notifications-db-claim
---
apiVersion: v1
kind: Service
metadata:
  name: notifications
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: notifications
