k8s/manifests/5-composer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composer
  namespace: tenant-grupo8-egs-deti-ua-pt
  labels:
    app: composer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: composer
  template:
    metadata:
      labels:
        app: composer
    spec:
      containers:
        - name: composer
          image: registry.deti/tenant-grupo8-egs-deti-ua-pt/composer:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: composer
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: composer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uastream
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ingressClassName: traefik
  rules:
    - host: uastream.com
      http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /objects
            pathType: Prefix
            backend:
              service:
                name: object-storage
                port:
                  number: 8080
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notifications
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: composer
                port:
                  number: 8080
