k8s/manifests/6-monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: datasources-volume
              mountPath: /etc/grafana/provisioning/datasources/
            - name: providers-volume
              mountPath: /etc/grafana/provisioning/dashboards/
            - name: dashboard-files-volume
              mountPath: /etc/grafana/provisioning/dashboards/files/
      volumes:
        - name: datasources-volume
          configMap:
            name: grafana-datasources
        - name: providers-volume
          configMap:
            name: grafana-providers
        - name: dashboard-files-volume
          configMap:
            name: grafana-dashboard-files
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: tenant-grupo8-egs-deti-ua-pt
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.uastream.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
